# JIF

./: pyproject.toml
case_studies/: .gitignore  analyze_exp.ipynb  devel_jiffy_galsim_galaxy.ipynb  run_exp.ipynb  run_exp.py  test_exp.ipynb  truth_est_df.csv
config/: base_infer.yaml  n_1_samples_init_params.cfg  n_2_samples_init_params.cfg
jiffy/: decoder.py  detections.py  galsim_galaxy.py  notebook_plotting_params.py  roaster.py  roaster_args.py  roaster_inspector.py  roaster_inspector_args.py
